fix: docker-compose context after moving docker-compose.yaml

--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
   api:
     container_name: ledger-case-study-api
     build:
-      context: api
+      context: .
       dockerfile: Dockerfile
     command: sh -c "wait-for db:5432 && python manage.py runserver 0.0.0.0:8000"
     depends_on:
@@ -28,7 +28,7 @@ services:
       - "8000:8000"
     tty: true
     volumes:
-      - ./api:/usr/src/app
+      - .:/usr/src/app
     networks:
       - ledger-case-study-network
 
